2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml,
	  MonoDevelop.VersionControl/VersionControl.addin.xml: Bump MD version.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/Repository.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/UrlBasedRepository.cs:
	  Make a copy of the repository before editing, and only update the
	  original copy if the user clicks on OK. Fixes bug #336155.
	* MonoDevelop.VersionControl/gtk-gui/gui.stetic: Flush

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/overlay_added.png,
	  MonoDevelop.VersionControl/overlay_conflicted.png,
	  MonoDevelop.VersionControl/overlay_controled.png,
	  MonoDevelop.VersionControl/overlay_locked.png,
	  MonoDevelop.VersionControl/overlay_modified.png,
	  MonoDevelop.VersionControl/overlay_removed.png: Use tango file icons.
	  Removed obsolete icons.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Diffs.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Logs.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs:
	  Destroy the view when disposing.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Updated comment.
	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/EditRepositoryDialog.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/Repository.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/UrlBasedRepositoryEditor.cs:
	  Set a default repo name if none is specified. Fixes bug #335114.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 
